Fix post header position on small screen

--- a/assets/css/core/zmedia.css
+++ b/assets/css/core/zmedia.css
@@ -33,6 +33,7 @@
     .post-header {
         width: 100%;
         margin-left: 0;
+        margin-top: var(--header-width);
     }
 
     /* archive */
